--- a/index.html
+++ b/index.html
@@ -1,9 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>nicholas</title>
-    </head>
-    <body>
-        <p>epic website</p>
-    </body>
-</html>
+<html lang="en"><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="This is a dedicated hub for my social links.">
+<title>reversed.coffee</title>
+<style>
+            @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Inter:wght@100..900&family=JetBrains+Mono:wght@200&display=swap');
+
+            html, body {
+                margin: 0;
+                padding: 0;
+                background-color: #20201D;
+                overflow: hidden;
+            }
+
+            h1 {
+                margin: 0 0 0.25em 0;
+                color: #66C3FF;
+                font-family: "Caveat", cursive;
+                font-weight: 700;
+                font-size: 3.0em;
+            }
+
+            h3 {
+                margin: 0 0 1em 0;
+                color: #66C3FF;
+                font-family: "Inter", sans-serif;
+                font-weight: 300;
+                font-size: 1.5em;
+            }
+
+            .primary {
+                cursor: default;
+                padding: 10px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                height: calc(100vh - 10px * 2);
+                text-align: center;
+            }
+
+            .links {
+                cursor: pointer;
+            }
+
+            i {
+                margin: 0 0.25em;
+                font-size: 2em;
+                color: #66C3FF;
+                min-height: calc(2em - 0.25em * 2);
+                transition: 0.3s;
+            }
+
+            i:hover {
+                color: #3693CF;
+            }
+
+            .gradient {
+                background-image: linear-gradient(45deg, #56B3BF, #3693CF, white 90%);
+                background-position: 0%;
+                background-size: 400%;
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+            }
+        </style>
+<link rel="stylesheet" href="index_files/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer">
+</head>
+<body>
+<div class="primary">
+<h1 class="gradient">Nicholas Hardenburgh</h1>
+<h3><strong>got root?</strong></h3>
+<div class="links">
+<a href="https://linkedin.com/in/nicholas-hardenburgh" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+<a href="https://github.com/reversed-coffee" target="_blank"><i class="fa-brands fa-github"></i></a>
+<a href="mailto:nick@reversed.coffee"><i class="fa-solid fa-envelope"></i></a>
+</div>
+</div>
+
+
+</body></html>
